--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 <p>
   <strong>Time:</strong>
-  <%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %>
+  <%= @meeting.hour %>:<%= @meeting.minute %> <%= @meeting.format %>
 </p>
 <p>
   <strong>Name:</strong>
