--- a/app/views/meetings/admin.html.erb
+++ b/app/views/meetings/admin.html.erb
@@ -76,7 +76,7 @@
         <td><%= form_with(model: meeting) do |form| %>
 
           <div class="field">
-            <%=  :active %>
+            <%=  form.check_box :active %>
           </div>
           </td>
           <td>
