--- a/app/views/calendarevents/_form.html.erb
+++ b/app/views/calendarevents/_form.html.erb
@@ -1,64 +1,37 @@
-<%= stylesheet_link_tag "registration.css" %>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<%= form_with(model: calendarevent) do |form| %>
+  <% if calendarevent.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(calendarevent.errors.count, "error") %> prohibited this calendarevent from being saved:</h2>
 
-<section class="vh-auto bg-image">
-  <a class="btn btn-danger mt-4" href="/home" role="button" style="color:black;">Back to Home Page</a>
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px; background: rgb(255, 255, 255);">
-            <div class="card-body p-5">
-              <h2>Add a New Event</h2>
-
-              <%= form_with(model: calendarevent) do |form| %>
-                <% if calendarevent.errors.any? %>
-                  <div id="error_explanation">
-                    <h2><%= pluralize(calendarevent.errors.count, "error") %> prohibited this calendarevent from being saved:</h2>
-              
-                    <ul>
-                      <% calendarevent.errors.each do |error| %>
-                        <li><%= error.full_message %></li>
-                      <% end %>
-                    </ul>
-                  </div>
-                <% end %>
-                
-                <div class="form-outline mb-4">
-                  <%= form.text_field :name, id: "form3Example1cg", class: "form-control form-control-lg" %>
-                  <label class="form-label" for="form3Example1cg">Name</label>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <%= form.text_area :description, id: "form3Example1cg", class: "form-control form-control-lg" %>
-                  <label class="form-label" for="form3Example1cg">Description</label>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <%= form.datetime_select :start_time, id: "form3Example1cg", class: "form-control form-control-lg" %>
-                  <label class="form-label" for="form3Example3cg">Start Time</label>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <%= form.datetime_select :end_time, id: "form3Example1cg", class: "form-control form-control-lg" %>
-                  <label class="form-label" for="form3Example4cg">End Time</label>
-                </div>
-
-                <div class="d-flex justify-content-center">
-                  <%= form.submit, class: "btn btn-primary btn-lg" %>
-                </div>
-              <% end %>
-
-            </div>
-          </div>
-        </div>
-      </div>
+      <ul>
+        <% calendarevent.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
     </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
-</section>
 
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
+  </div>
 
+  <div class="field">
+    <%= form.label :start_time %>
+    <%= form.datetime_select :start_time %>
+  </div>
 
+  <div class="field">
+    <%= form.label :end_time %>
+    <%= form.datetime_select :end_time %>
+  </div>
 
-
-
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
